--- a/index.html
+++ b/index.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
     <title>Document</title>
 </head>
 <body>
     <header class="cabecalho">
-        <div class="cabechalho-suspenso">
-            <button class="botao-suspenso">suspenso</button> 
+        <p><a href="index.html" class="pagina-inicial"> Página inicial</a></p>
+
+        <div class="cabecalho-suspenso">
+            <p class="botao-suspenso">Entre em contato</p> 
             <div class="itens-suspenso">
-                <a href="#">odebaran</a>
-                <a href="#">odebaran</a>
-                <a href="#">odebaran</a>
+                <a href="#" class="itens">E-mail</a>
+                <a href="#" class="itens">Telefone</a>
+                <a href="#" class="itens">Serviços</a>
+            </div>
+        </div>
+
+        <div class="login-suspenso">
+            <p class="login-texto"><span class="material-symbols-outlined">
+                login
+                </span>Login</p>
+            <div class="registro-suspenso">
+                <a href="#" class="itens">Acessar perfil</a>
+                <a href="#" class="itens">Registrar perfil</a>
             </div>
         </div>
     </header>
