--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+   
 
     <title>Document</title>
 </head>
@@ -26,13 +28,36 @@
                 login
                 </span>Login</p>
             <div class="registro-suspenso">
-                <a href="#" class="itens">Acessar perfil</a>
                 <a href="#" class="itens">Registrar perfil</a>
             </div>
         </div>
     </header>
+    
+    <h1 class="titulo">Avalie os nossos serviços</h1>
 
+    <main class="container-principal">
+        <div class="textos">
+            <p>Faça o seu cadastro para acessar a página de avaliação. Nos avalie, isso é muito importante para a continuidade do nosso trabalho. 
+            </p>
+            <p>Basta ir em login, fazer o seu registro, depois do registro você será redirecionado para a nossa página de avaliação, na página de avaliação basta selecionar uma das estrelas, sendo 1 ruim e 5 excelente, e por fim clicar em enviar. Visualize ao lado o nosso template de avaliação.</p>
+        </div>
+        <div class="avaliacao">
+            <h2 class="avaliacao-titulo">Faça a sua avaliação</h2>
+            <p class="avaliacao-texto">Por favor, deixe-nos saber como fizemos com o seu pedido de suporte. Todos os comentários são apreciados para nos ajudar a melhorar o nosso serviço</p>
+            <ul class="lista-itens">
+                <li class="avaliacao-itens"></li>
 
+                <li class="avaliacao-itens"></li>
+
+                <li class="avaliacao-itens"></li>
+
+                <li class="avaliacao-itens"></li>
+
+                <li class="avaliacao-itens"></li>
+            </ul>
+            <button class="botao">Enviar</button>
+        </div>
+    </main>
     <script src="./js/main.js"></script>
 </body>
 </html>
