--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-   
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
     <title>Document</title>
 </head>
@@ -28,7 +28,7 @@
                 login
                 </span>Login</p>
             <div class="registro-suspenso">
-                <a href="#" class="itens">Registrar perfil</a>
+                <a href="./form.html" class="itens">Registrar perfil</a>
             </div>
         </div>
     </header>
@@ -39,25 +39,8 @@
         <div class="textos">
             <p>Faça o seu cadastro para acessar a página de avaliação. Nos avalie, isso é muito importante para a continuidade do nosso trabalho. 
             </p>
-            <p>Basta ir em login, fazer o seu registro, depois do registro você será redirecionado para a nossa página de avaliação, na página de avaliação basta selecionar uma das estrelas, sendo 1 ruim e 5 excelente, e por fim clicar em enviar. Visualize ao lado o nosso template de avaliação.</p>
-        </div>
-        <div class="avaliacao">
-            <h2 class="avaliacao-titulo">Faça a sua avaliação</h2>
-            <p class="avaliacao-texto">Por favor, deixe-nos saber como fizemos com o seu pedido de suporte. Todos os comentários são apreciados para nos ajudar a melhorar o nosso serviço</p>
-            <ul class="lista-itens">
-                <li class="avaliacao-itens"></li>
-
-                <li class="avaliacao-itens"></li>
-
-                <li class="avaliacao-itens"></li>
-
-                <li class="avaliacao-itens"></li>
-
-                <li class="avaliacao-itens"></li>
-            </ul>
-            <button class="botao">Enviar</button>
+            <p>Basta ir em login, fazer o seu registro, depois do registro você será redirecionado para a nossa página de avaliação, na página de avaliação basta selecionar uma das estrelas, sendo 1 ruim e 5 excelente, e por fim clicar em enviar.</p>
         </div>
     </main>
-    <script src="./js/main.js"></script>
 </body>
 </html>
