--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <h1 class="titulo">Avalie os nossos serviços</h1>
 
     <main class="container-principal">
-        <div class="textos">
-            <p>Faça o seu cadastro para acessar a página de avaliação. Nos avalie, isso é muito importante para a continuidade do nosso trabalho. 
+        <section class="textos">
+            <p>Faça o seu cadastro para acessar a página de avaliação. Nos avalie, isso é muito importante para a continuidade do nosso trabalho.Basta ir em login, fazer o seu registro, depois do registro você será redirecionado para a nossa página de avaliação, na página de avaliação basta selecionar uma das estrelas, sendo 1 ruim e 5 excelente, e por fim clicar em enviar. 
             </p>
-            <p>Basta ir em login, fazer o seu registro, depois do registro você será redirecionado para a nossa página de avaliação, na página de avaliação basta selecionar uma das estrelas, sendo 1 ruim e 5 excelente, e por fim clicar em enviar.</p>
-        </div>
+            
+        </section>
     </main>
 </body>
 </html>
