--- a/form.html
+++ b/form.html
@@ -12,19 +12,19 @@
     <form class="container-form">
         <div class="form-campos">
             <label for="nome" >Nome</label>
-            <input type="text" placeholder="Nome" id="nome" class="input" >
+            <input type="text" placeholder="Nome" id="nome" class="input" required>
             
             <label for="sobrenome">Sobrenome</label>
-            <input type="text" placeholder="Sobrenome" id="sobrenome" class="input" >
+            <input type="text" placeholder="Sobrenome" id="sobrenome" class="input" required>
             
             <label for="email">E-mail</label>
-            <input type="email" placeholder="seuemail@hotmail.com" id="email" class="input" >
+            <input type="email" placeholder="seuemail@hotmail.com" id="email" class="input" required >
 
             <label for="telefone">Telefone</label>
-            <input type="tel" placeholder="(xx)xxxxx-xxxx" id="telefone" class="input" >
+            <input type="tel" placeholder="(xx)xxxxx-xxxx" id="telefone" class="input" required >
 
             <label for="senha">Senha</label>
-            <input type="password" placeholder="digite a sua senha" id="senha" class="input" >
+            <input type="password" placeholder="digite a sua senha" id="senha" class="input" required >
 
             <button type="submit" class="submit" id="submit">Enviar</button>
 
